--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
     "reflect-metadata": "^0.2.1",
     "typeorm": "^0.3.20"
